<resources>
    <string name="app_name">Product Info App</string>
    <string name="app_display">Product List</string>
    <string name="btn_view_all_products">View All products</string>
    <string name="btn_add_product">Add Product</string>
    <string name="et_prod_name">Product Name</string>
    <string name="et_prod_desc">Product Description</string>
    <string name="btn_add_product_2">Add</string>
</resources>