<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    tools:context=".ProductModule">

    <EditText
        android:id="@+id/etProdName"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@color/grey4"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/et_prod_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/merlot"
        android:fontFamily="@font/poppins"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:text="@string/btn_add_product_2"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etProdDesc"
        app:layout_constraintTop_toBottomOf="@+id/etProdDesc"
        app:layout_constraintVertical_bias="0.009" />

    <EditText
        android:id="@+id/etProdDesc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/grey4"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/et_prod_desc"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/etProdName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etProdName"
        app:layout_constraintTop_toBottomOf="@+id/etProdName" />

</androidx.constraintlayout.widget.ConstraintLayout>